--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Trabalho_04</string>
     <string name="Contatos">Contatos</string>
+    <string name="chatGrupo">Chat em grupo</string>
     <string name="Sair">Sair</string>
 </resources>
